// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ManageData hide dev tools and stack management links if unavailable 1`] = `
<_EuiPageSection
  aria-labelledby="homeDataManage__title"
  bottomBorder={true}
  data-test-subj="homeDataManage"
  paddingSize="xl"
>
  <EuiFlexGroup
    alignItems="center"
  >
    <EuiFlexItem
      grow={1}
    >
      <EuiTitle
        size="s"
      >
        <h2
          id="homeDataManage__title"
        >
          <MemoizedFormattedMessage
            defaultMessage="Management"
            id="home.manageData.sectionTitle"
          />
        </h2>
      </EuiTitle>
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiSpacer />
  <EuiFlexGroup>
    <EuiFlexItem
      css="unknown styles"
      key="security"
    >
      <Synopsis
        description="Control who has access and what tasks they can perform."
        iconType="securityApp"
        id="security"
        onClick={[Function]}
        title="Protect your data"
        url="path-to-security-roles"
      />
    </EuiFlexItem>
    <EuiFlexItem
      css="unknown styles"
      key="monitoring"
    >
      <Synopsis
        description="Track the real-time health and performance of your deployment."
        iconType="monitoringApp"
        id="monitoring"
        onClick={[Function]}
        title="Monitor the stack"
        url="path-to-monitoring"
      />
    </EuiFlexItem>
    <EuiFlexItem
      css="unknown styles"
      key="snapshot_restore"
    >
      <Synopsis
        description="Save snapshots to a backup repository, and restore to recover index and cluster state."
        iconType="storage"
        id="snapshot_restore"
        onClick={[Function]}
        title="Store & recover backups"
        url="path-to-snapshot-restore"
      />
    </EuiFlexItem>
    <EuiFlexItem
      css="unknown styles"
      key="index_lifecycle_management"
    >
      <Synopsis
        description="Define lifecycle policies to automatically perform operations as an index ages."
        iconType="indexSettings"
        id="index_lifecycle_management"
        onClick={[Function]}
        title="Manage index lifecycles"
        url="path-to-index-lifecycle-management"
      />
    </EuiFlexItem>
  </EuiFlexGroup>
</_EuiPageSection>
`;

exports[`ManageData render 1`] = `
<_EuiPageSection
  aria-labelledby="homeDataManage__title"
  bottomBorder={true}
  data-test-subj="homeDataManage"
  paddingSize="xl"
>
  <EuiFlexGroup
    alignItems="center"
  >
    <EuiFlexItem
      grow={1}
    >
      <EuiTitle
        size="s"
      >
        <h2
          id="homeDataManage__title"
        >
          <MemoizedFormattedMessage
            defaultMessage="Management"
            id="home.manageData.sectionTitle"
          />
        </h2>
      </EuiTitle>
    </EuiFlexItem>
    <EuiFlexItem
      grow={false}
    >
      <EuiFlexGroup
        alignItems="center"
        responsive={false}
        wrap={true}
      >
        <EuiFlexItem
          grow={false}
        >
          <RedirectAppLinks
            coreStart={
              Object {
                "application": Object {
                  "capabilities": Object {
                    "navLinks": Object {
                      "dev_tools": true,
                      "management": true,
                    },
                  },
                },
              }
            }
          >
            <EuiButtonEmpty
              data-test-subj="homeDevTools"
              flush="both"
              href=""
              iconType="wrench"
            >
              <MemoizedFormattedMessage
                defaultMessage="Dev Tools"
                id="home.manageData.devToolsButtonLabel"
              />
            </EuiButtonEmpty>
          </RedirectAppLinks>
        </EuiFlexItem>
        <EuiFlexItem
          grow={false}
        >
          <RedirectAppLinks
            coreStart={
              Object {
                "application": Object {
                  "capabilities": Object {
                    "navLinks": Object {
                      "dev_tools": true,
                      "management": true,
                    },
                  },
                },
              }
            }
          >
            <EuiButtonEmpty
              data-test-subj="homeManage"
              flush="both"
              href=""
              iconType="gear"
            >
              <MemoizedFormattedMessage
                defaultMessage="Stack Management"
                id="home.manageData.stackManagementButtonLabel"
              />
            </EuiButtonEmpty>
          </RedirectAppLinks>
        </EuiFlexItem>
      </EuiFlexGroup>
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiSpacer />
  <EuiFlexGroup>
    <EuiFlexItem
      css="unknown styles"
      key="security"
    >
      <Synopsis
        description="Control who has access and what tasks they can perform."
        iconType="securityApp"
        id="security"
        onClick={[Function]}
        title="Protect your data"
        url="path-to-security-roles"
      />
    </EuiFlexItem>
    <EuiFlexItem
      css="unknown styles"
      key="monitoring"
    >
      <Synopsis
        description="Track the real-time health and performance of your deployment."
        iconType="monitoringApp"
        id="monitoring"
        onClick={[Function]}
        title="Monitor the stack"
        url="path-to-monitoring"
      />
    </EuiFlexItem>
    <EuiFlexItem
      css="unknown styles"
      key="snapshot_restore"
    >
      <Synopsis
        description="Save snapshots to a backup repository, and restore to recover index and cluster state."
        iconType="storage"
        id="snapshot_restore"
        onClick={[Function]}
        title="Store & recover backups"
        url="path-to-snapshot-restore"
      />
    </EuiFlexItem>
    <EuiFlexItem
      css="unknown styles"
      key="index_lifecycle_management"
    >
      <Synopsis
        description="Define lifecycle policies to automatically perform operations as an index ages."
        iconType="indexSettings"
        id="index_lifecycle_management"
        onClick={[Function]}
        title="Manage index lifecycles"
        url="path-to-index-lifecycle-management"
      />
    </EuiFlexItem>
  </EuiFlexGroup>
</_EuiPageSection>
`;

exports[`ManageData render null without any features 1`] = `""`;
